--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="project1">
                             <div class="videoSide">
                                 <video class="laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/2020.mp4" type="video/mp4">
+                                    <source src="./assets/2020.MP4" type="video/mp4">
                                     <source src="./assets/2020.ogg" type="video/ogg">
                                     Your browser does not support the video tag.
                                 </video>
@@ -126,7 +126,7 @@
 
                             <div class="videoSide">
                                 <video class="video2 laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/ColorSwitch.mp4" type="video/mp4">
+                                    <source src="./assets/ColorSwitch.MP4" type="video/mp4">
                                     <source src="./assets/ColorSwitch.ogg" type="video/ogg">
                                     Your browser does not support the video tag.
                                 </video>
@@ -288,8 +288,8 @@
         </div> -->
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="./resources/gsap.min.js"></script>
+    <script src="./resources/anime.min.js"></script>
 
     <script src="./resources/app.js"></script>
 
