Changed extension from MP4 to mp4

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="project1">
                             <div class="videoSide">
                                 <video class="laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/2020.MP4" type="video/mp4">
+                                    <source src="./assets/2020.mp4" type="video/mp4">
                                     <source src="./assets/2020.ogg" type="video/ogg">
                                     Your browser does not support the video tag.
                                 </video>
@@ -126,7 +126,7 @@
 
                             <div class="videoSide">
                                 <video class="video2 laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/ColorSwitch.MP4" type="video/mp4">
+                                    <source src="./assets/ColorSwitch.mp4" type="video/mp4">
                                     <source src="./assets/ColorSwitch.ogg" type="video/ogg">
                                     Your browser does not support the video tag.
                                 </video>
