put src inside video tag

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                     <li class="splide__slide">
                         <div class="project1">
                             <div class="videoSide">
-                                <video class="laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/2020.mp4" type="video/mp4">
-                                    <source src="./assets/2020.ogg" type="video/ogg">
+                                <video class="laptop" src="./assets/2020.mp4" muted autoplay width="500px" height="280px" controls loop>
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -99,9 +97,7 @@
                     <li class="splide__slide">
                         <div class="project1 project2">
                             <div class="videoSide2">
-                                <video class="isustain" muted autoplay width="300px" height="500px" controls loop>
-                                    <source src="./assets/isustain.mp4" type="video/mp4">
-                                    <source src="./assets/isustain.ogg" type="video/ogg">
+                                <video class="isustain"  src="./assets/isustain.mp4" muted autoplay width="300px" height="500px" controls loop>                                   
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -125,9 +121,7 @@
                         <div class="project1 project3">
 
                             <div class="videoSide">
-                                <video class="video2 laptop" muted autoplay width="500px" height="280px" controls loop>
-                                    <source src="./assets/ColorSwitch.mp4" type="video/mp4">
-                                    <source src="./assets/ColorSwitch.ogg" type="video/ogg">
+                                <video class="video2 laptop" src="./assets/ColorSwitch.mp4" muted autoplay width="500px" height="280px" controls loop>
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
