--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
     </div>
     </div>
 
+    <div class="intro">
+       <!--  <div class="intro-text">
+          <h1 class="hide">
+            <span class="text"></span>
+          </h1>
+          <h1 class="hide">
+            <span class="text">For Everyday</span>
+          </h1>
+          <h1 class="hide">
+            <span class="text">people.</span>
+          </h1>
+        </div> -->
+      </div>
+      <!-- <div class="slider"></div>
+ -->
     <div id="secwork"></div>
 
     <div class="divider">
